# ajo-soroban

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
contracts/: README.md
contracts/ajo/: Cargo.toml
contracts/ajo/src/: cycle.rs  errors.rs  group.rs  lib.rs  storage.rs  tests.rs  types.rs  vault.rs
frontend/: .env.local.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/circles/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/components/circles/: CircleCard.tsx  ContributionProgress.tsx  CreateCircleForm.tsx  MemberList.tsx
frontend/components/dashboard/: ActivityFeed.tsx  CircleList.tsx  MetricCard.tsx  SavingsChart.tsx
frontend/components/landing/: CirclesShowcase.tsx  DashboardPreview.tsx  FAQ.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx  Testimonials.tsx  TrustBand.tsx  WhyOnChain.tsx
frontend/components/layout/: ClientShell.tsx  DashboardSidebar.tsx  Footer.tsx  Navbar.tsx
frontend/components/ui/: Badge.tsx  Button.tsx  Card.tsx
frontend/context/: WalletContext.tsx
frontend/hooks/: useCircle.ts
frontend/lib/: contract.ts  freighter.ts  mockData.ts  stellar.ts  utils.ts
frontend/types/: ajo.ts
mobile/: README.md  app.json  babel.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
mobile/app/: _layout.tsx  index.tsx
mobile/context/: WalletContext.tsx
mobile/lib/: contract.ts  mockData.ts
mobile/types/: ajo.ts
(+18 files in other folders)
