[package]
name = "ajo"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.1", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "22.0.1", features = ["testutils", "alloc"] }

[features]
testutils = ["soroban-sdk/testutils"]
